--- a/demo/hello/pubspec.yaml
+++ b/demo/hello/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
 
   go_router: ^13.1.0
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
