--- a/demo/hello/pubspec.yaml
+++ b/demo/hello/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.4.0
   get: ^4.6.6
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
