--- a/demo/day02/pubspec.yaml
+++ b/demo/day02/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^13.1.0
   shared_preferences: ^2.2.2
+  dio: ^5.4.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
