--- a/demo/day02/pubspec.yaml
+++ b/demo/day02/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.4.0
   get: ^4.6.6
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
