--- a/demo/day02/pubspec.yaml
+++ b/demo/day02/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.4.0
   get: ^4.6.6
   cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
