--- a/demo/day02/pubspec.yaml
+++ b/demo/day02/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get: ^4.6.6
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
